@@ -1,5 +1,5 @@
 --------------------------------------------------
-mtPaint 3.40 - Copyright (C) 2004-2009 The Authors
+mtPaint 3.40 - Copyright (C) 2004-2010 The Authors
 --------------------------------------------------
 
 See 'Credits' section for a list of the authors.
@@ -127,6 +127,7 @@ Pavel Ruzicka
 Puppy Linux (Barry Kauler)
 Vlastimil Krejcir
 William Kern
+Pasi Kallinen
 
 
 Translations
